--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,8 +27,7 @@
         </activity>
         <activity android:name=".ui.main.MainActivity" android:exported="false" />
         <activity android:name=".ui.login.LoginActivity" android:exported="false" />
-        <activity android:name=".ui.pegawai.DetailPegawaiActivity" android:exported="false" />
-        <activity android:name=".ui.pegawai.AddEditPegawaiActivity" android:exported="false" />
+        <activity android:name=".ui.pegawai.PegawaiActivity" android:exported="false" />
     </application>
 
 </manifest>
